# Fluid-FLow

./: .gitignore  CMakeLists.txt  main.cpp
DEBUG/: Create_animation.m  Flow_animated.m  Flow_animated_data.m  Plot_mesh.m  average_times.m  bad1.avi  boundary_points.txt  clear.sh  normal_vectors.txt  plot_boundary.m  plot_boundary_and_norms.m  plot_boundary_and_norms_x.m  plot_data.m  plot_flow.m  plot_flow_norm_less.m  plot_flow_normalized.m  plot_flow_stream.m  plot_less_data.m  plot_mesh_point.m  plot_mesh_triangles.m  plot_norms.m  plot_pressure.m  times.txt
Examples/: Rigid_body_ex.hpp  big_vec_derivs.h  big_vec_derivs.hpp  calc_derivs.hpp  derivatives.hpp  interp.hpp  rotated_derivs.h
Fluid_flow/: boundary_conditions.hpp  create_flow.hpp  create_grids.hpp  flow_env.hpp  interp.hpp  make_mats.hpp  make_vecs.hpp  solver.hpp  timing.hpp  update_mesh.hpp  update_vecs.hpp
MyMath/: big_matrix.hpp  big_vec.hpp  boundary.hpp  calc.hpp  dist_to_plane.hpp  finite_difference.hpp  grid.hpp  ops.hpp  vec3.hpp
Rigid_body/: body.hpp  mesh.hpp  ray.hpp  triangle.hpp  triangle_mesh.hpp
old/: CMakeLists.txt  main.cpp
old/MyMath/: ops.cpp  ops.hpp  vec3.cpp  vec3.hpp
old/Rigid_body/: body.cpp  body.hpp
